<?xml version="1.0" encoding="utf-8"?>
<resources>
    // application strings
    <string name="app_name">PlayaCompass</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    // initialization strings
    <string name="manLabel">GS2016</string>
    <string name="manLat">40.7864</string>
    <string name="manLon">-119.2065</string>
    <string name="manNorthAngle">315.0</string>
    <string name="manFPDLat">364336.0</string>
    <string name="manFPDLon">276923.0</string>
    <string name="manDeclination">9.94</string>

    // user interface strings
    <string name="btnLabelMarkLocation">Tap to Mark Location</string>
    <string name="gsName">empty gsName</string>
    <string name="gsLatLon">empty gsLatLon</string>
    <string name="hereName">empty hereName</string>
    <string name="hereLatLon">empty hereLatLon</string>
    <string name="hereMcadMdf">empty hereMcadMdf</string>
    <string name="hereStreet">empty hereStreet</string>
    <string name="thereName">empty thereName</string>
    <string name="thereLatLon">empty thereLatLon</string>
    <string name="thereMcadMdf">empty thereMcadMdf</string>
    <string name="thereStreet">empty thereStreet</string>
    <string name="bearingName">empty bearingName</string>
    <string name="bearingDistFeet">empty bearingDistFeet</string>
    <string name="bearingDeg">empty bearingDeg</string>
    <string name="bearingRose">empty bearingRose</string>
    <string name="bearingLabel">empty bearingLabel</string>
    <string name="headingName">empty headingName</string>
    <string name="headingDeg">empty headingDeg</string>
    <string name="headingRose">empty headingRose</string>
    <string name="headingLabel">empty headingLabel</string>
</resources>
