<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonMarkLocation"
        android:onClick="btnMarkLocationClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:focusable="false"
        android:longClickable="false"
        android:text="@string/btnLabelMarkLocation" />

    <TextView
        android:id="@+id/gsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gsName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gsLatLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gsLatLon"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/hereName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hereName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/hereLatLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hereLatLon"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/hereMcadMdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hereMcadMdf"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/hereStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hereStreet"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/thereName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thereName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/thereLatLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thereLatLon"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/thereMcadMdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thereMcadMdf"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/thereStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thereStreet"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bearingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearingName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bearingDistFeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearingDistFeet"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/bearingDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearingDeg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bearingRose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearingRose"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/bearingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearingLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/headingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/headingDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingDeg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/headingRose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingRose"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/headingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headingLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</LinearLayout>
